--- a/.env
+++ b/.env
@@ -7,3 +7,11 @@ SQLALCHEMY_TRACK_MODIFICATIONS = False
 SHOW_SQLALCHEMY_LOG_MESSAGES = False
 
 ERROR_404_HELP = False
+NEFHOST = "http://backend:80"
+CAPIFHOST = "capifcore"
+CAPIFHTTPS = 443
+
+POSTGRES_USER: "netapp"
+POSTGRES_PASSWORD: "secret"
+PGDATA: "/var/lib/postgresql/data"
+POSTGRES_DB: "netappdb"
