--- a/.env
+++ b/.env
@@ -7,15 +7,27 @@ SQLALCHEMY_TRACK_MODIFICATIONS = False
 SHOW_SQLALCHEMY_LOG_MESSAGES = False
 ERROR_404_HELP = False
 
+NETAPPID = "myNetapp"
 NEFHOST = "http://backend:80"
 CAPIFHOST = "capifcore"
+NEFUSER = "admin@my-email.com"
+NEFPASS = "pass"
 CAPIFHTTPS = 443
 CAPIFHTTP = 8080
 CALLBACK_ADDRESS = 192.168.1.1:8000
 
-POSTGRES_USER: "netapp"
-POSTGRES_PASSWORD: "secret"
-PGDATA: "/var/lib/postgresql/data"
-POSTGRES_DB: "netappdb"
+NETAPPDIR = "http://netapp:10001"
+POSTGRES_USER =  "netapp"
+POSTGRES_PASSWORD = "secret"
+PGDATA = "/var/lib/postgresql/data"
+POSTGRES_DB = "netappdb"
 
-PATH_TO_CERTS: "/usr/src/app/certs"
+PATH_TO_CERTS = "/usr/src/app/certs"
+
+MAIL_SERVER = "smtp.office365.com"
+MAIL_PORT = 587
+MAIL_USE_TLS = True
+MAIL_USE_SSL = False
+MAIL_USERNAME = "smartirrigationnetapp@outlook.es"
+MAIL_PASSWORD = "o57Dh+kQ"
+MAIL_RECIPIENT = "adz@uma.es"
