--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
    restart: always
    env_file:
       - .env 
-     
    expose:
     - "5433"
    ports:
@@ -16,6 +15,7 @@ services:
   
  netapp:
    build: .
+   image: uma-netapp
    container_name: netapp
    ports:
     - "10001:10001"
@@ -23,7 +23,6 @@ services:
     - db
    env_file:
       - .env 
-     
 
 networks:
   default:
