--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,10 @@ services:
    env_file:
       - .env 
 
-networks:
-  default:
-    name: services_default
-    external: true
+# networks:
+#   default:
+#     name: services_default
+#     external: true
 
 volumes:
  db-data:
