--- a/k8s/netapp/environment.yaml
+++ b/k8s/netapp/environment.yaml
@@ -5,21 +5,17 @@ metadata:
 data:
   FLASK_APP: "main.py"
   SECRET_KEY: "7110c8ae51a4b5af97be6534caefs0e4bb9bdcb3380af00sr50b23a5d1616bf319bc298105da20fe"
-  SQLALCHEMY_DATABASE_URI: "postgresql://netapp:secret@postgresdb:5433/netappdb" # "postgresql://netapp:secret@postgres_container:5433/netappdb" 
+  SQLALCHEMY_DATABASE_URI: "postgresql://netapp:secret@postgresdb:5433/netappdb"
   SQLALCHEMY_TRACK_MODIFICATIONS: "False"
   SHOW_SQLALCHEMY_LOG_MESSAGES: "False"
   ERROR_404_HELP: "False"
-  NEFHOST: "http://umacsic-nef.apps.ocp-epg.hi.inet:80" # nefemu
+  NEFHOST: "http://umacsic-nef.apps.ocp-epg.hi.inet:80"
   NEFUSER: "admin@my-email.com"
   NEFPASS: "pass"
   CAPIFHOST: "umacsic-capif.apps.ocp-epg.hi.inet"
   CAPIFHTTPS: "443"
-  CAPIFHTTP: "80" # 8080?
+  CAPIFHTTP: "80"
   CALLBACK_ADDRESS: "uma-netapp"
   NETAPPID: "myNetapp"
   NETAPPDIR: "http://uma-netapp:10001"
-  # POSTGRES_DB: "netappdb"
-  # POSTGRES_USER: "netapp"
-  # POSTGRES_PASSWORD: "secret"
-  # PGDATA: "/var/lib/postgresql/data"
   PATH_TO_CERTS: "/usr/src/app/certs"
