--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@ CAPIFHTTPS = 443
 CAPIFHTTP = 8080
 CALLBACK_ADDRESS = 192.168.1.1:8000
 
+# ENVIRONMENT can be set to development or production
+ENVIRONMENT_MODE=development
+
 NETAPPDIR = "http://netapp:10001"
 POSTGRES_USER =  "netapp"
 POSTGRES_PASSWORD = "secret"
