Add var environment mode

--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ ERROR_404_HELP = False
 NETAPPID = "myNetapp"
 NETAPPDIR = "http://netapp:10001"
 
+# ENVIRONMENT can be set to development or production
+ENVIRONMENT_MODE = "development"
+
 NEFHOST = "http://backend:80"
 NEFUSER = "admin@my-email.com"
 NEFPASS = "pass"
