Update de capacity storage to 1GB

--- a/k8s/postgres/pv.yaml
+++ b/k8s/postgres/pv.yaml
@@ -8,8 +8,9 @@ metadata:
 spec:
   storageClassName: manual
   capacity:
-    storage: 8Gi
+    storage: 1Gi
   accessModes:
     - ReadWriteMany
+  persistenVolumeReclaimPolicy: Delete
   hostPath:
     path: "/var/lib/postgresql/data"
