--- a/.env
+++ b/.env
@@ -26,3 +26,6 @@ PGDATA = "/var/lib/postgresql/data"
 POSTGRES_DB = "netappdb"
 
 PATH_TO_CERTS = "/usr/src/app/certs"
+
+# Webcam Image Server
+CAM_SERVER = "http://webappcam:5001/api/images"
