Add var for the server of the cam CAM_SERVER

--- a/.env
+++ b/.env
@@ -22,3 +22,5 @@ CAPIFHTTP = 8080
 CALLBACK_ADDRESS = 192.168.1.1:8000
 
 PATH_TO_CERTS = "/usr/src/app/certs"
+
+CAM_SERVER = "http://webappcam:5001"
