--- a/k8s/netapp/deployment.yaml
+++ b/k8s/netapp/deployment.yaml
@@ -102,6 +102,11 @@ spec:
                 configMapKeyRef:
                   name: uma-configmap
                   key: ENVIRONMENT_MODE
+            - name: CAM_SERVER
+              valueFrom:
+                configMapKeyRef:
+                  name: uma-configmap
+                  key: CAM_SERVER
           ports:
           - containerPort: 10001
       hostAliases:
