--- a/.env
+++ b/.env
@@ -23,4 +23,4 @@ CALLBACK_ADDRESS = 192.168.1.1:8000
 
 PATH_TO_CERTS = "/usr/src/app/certs"
 
-CAM_SERVER = "http://webappcam:5001"
+MULTIESPECTRALCAM_SERVER = "http://multiespectralcam:5001"
