--- a/.env
+++ b/.env
@@ -28,4 +28,4 @@ POSTGRES_DB = "netappdb"
 PATH_TO_CERTS = "/usr/src/app/certs"
 
 # Webcam Image Server
-CAM_SERVER = "http://webappcam:5001"
+MULTIESPECTRALCAM_SERVER = "http://multiespectralcam:5001"
