--- a/.env
+++ b/.env
@@ -29,3 +29,7 @@ PATH_TO_CERTS = "/usr/src/app/certs"
 
 # Webcam Image Server
 MULTIESPECTRALCAM_SERVER = "http://multiespectralcam:5001"
+
+# TELEGRAM
+TELEGRAM_TOKEN = ''
+TELEGRAM_CHAT_ID = ''
