--- a/.env
+++ b/.env
@@ -24,3 +24,7 @@ CALLBACK_ADDRESS = 192.168.1.1:8000
 PATH_TO_CERTS = "/usr/src/app/certs"
 
 MULTIESPECTRALCAM_SERVER = "http://multiespectralcam:5001"
+
+# TELEGRAM
+TELEGRAM_TOKEN = ""
+TELEGRAM_CHAT_ID = ""
