--- a/k8s/netapp/environment.yaml
+++ b/k8s/netapp/environment.yaml
@@ -21,3 +21,5 @@ data:
   PATH_TO_CERTS: "/usr/src/app/certs"
   ENVIRONMENT_MODE: "development"
   MULTIESPECTRALCAM_SERVER: "http://10.11.32.202:5001"
+  TELEGRAM_TOKEN: ""
+  TELEGRAM_CHAT_ID: ""
