Update telegram vars

--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ PATH_TO_CERTS = "/usr/src/app/certs"
 MULTIESPECTRALCAM_SERVER = "http://multiespectralcam:5001"
 
 # TELEGRAM
-TELEGRAM_TOKEN = ''
-TELEGRAM_CHAT_ID = ''
+TELEGRAM_TOKEN = ""
+TELEGRAM_CHAT_ID = ""
