--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ POSTGRES_DB = "netappdb"
 
 PATH_TO_CERTS = "/usr/src/app/certs"
 
-# Webcam Image Server
+# Multiespectralcam Image Server
 MULTIESPECTRALCAM_SERVER = "http://multiespectralcam:5001"
 
 # TELEGRAM
