Update the var ENVIRONMENT_MODE to production

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ CAPIFHTTP = 8080
 CALLBACK_ADDRESS = 192.168.1.1:8000
 
 # ENVIRONMENT can be set to development or production
-ENVIRONMENT_MODE = "development"
+ENVIRONMENT_MODE = "production"
 
 NETAPPDIR = "http://netapp:10001"
 POSTGRES_USER =  "netapp"
