--- a/k8s/netapp/environment.yaml
+++ b/k8s/netapp/environment.yaml
@@ -20,6 +20,6 @@ data:
   NETAPPDIR: "http://uma-netapp:10001"
   PATH_TO_CERTS: "/usr/src/app/certs"
   ENVIRONMENT_MODE: "development"
-  MULTIESPECTRALCAM_SERVER: "http://150.214.47.156:10000"
-  TELEGRAM_TOKEN: "6423514890:AAGxjwmB02qirMYeTtfiCZNIXwWcndC_EG4"
-  TELEGRAM_CHAT_ID: "-822860546"
+  MULTIESPECTRALCAM_SERVER: ""
+  TELEGRAM_TOKEN: ""
+  TELEGRAM_CHAT_ID: ""
