Update branch with k8s deployment

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NETAPPID = "myNetapp"
 NETAPPDIR = "http://netapp:10001"
 
 # ENVIRONMENT can be set to development or production
-ENVIRONMENT_MODE = "development"
+ENVIRONMENT_MODE = "production"
 
 NEFHOST = "http://backend:80"
 NEFUSER = "admin@my-email.com"
@@ -23,7 +23,7 @@ CALLBACK_ADDRESS = 192.168.1.1:8000
 
 PATH_TO_CERTS = "/usr/src/app/certs"
 
-MULTIESPECTRALCAM_SERVER = "http://multiespectralcam:5001"
+MULTIESPECTRALCAM_SERVER = "http://multiespectralcam:10000"
 
 # TELEGRAM
 TELEGRAM_TOKEN = ""
